--- a/app/templates/charts.html
+++ b/app/templates/charts.html
@@ -1,3 +1,3 @@
 {%extends 'base.html' %} {% block content %}
-<p>This is author file.</p>
+<p>This is {{product_id}} charts file.</p>
 {% endblock %}
