--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -1,4 +1,3 @@
-{% extends 'base.html' %}
-{% block content %}
-    <p> This is products file.</p>
-{% endblock %}
+{%extends 'base.html' %} {% block content %}
+<p>This is products file.</p>
+{% for product in products %} {% endfor %} {% endblock %}
