--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel ="stylesheet" href="{{url_for('static',filename=
-    'style.css')}}">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
-    <title>SKRAPERSON</title>
-</head>
-<body>
-    <header>
-        <h1>
-            SKRAPERSON
-        </h1>
-    </header>
-    <nav class ='container'>
-        
-        <ul class = "row">
-            
-            <li class ="col-3">
-                <a href="{{url_for('index')}}">Main page</a>
-            </li>
-            <li class ="col-3">
-                <a href="{{url_for('extract')}}">Extract opinions</a>
-            </li>
-            <li class ="col-3">
-                <a href="{{url_for('products')}}">List products</a>
-            </li>
-            <li class ="col-3">
-                <a href="{{url_for('author')}}">About author</a>
-            </li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.css"
+    />
+    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <title>Ceneo.pl Web Scraper</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/2.0.8/js/dataTables.js"></script>
+  </head>
+  <body>
+    <header class="mainContainer">
+      <div class="siteTitle">
+        <h1>Ceneo.pl Web Scraper</h1>
+      </div>
+      <nav class="sideBar">
+        <ul class="listMenu">
+          <li class="">
+            <a href="{{url_for('index')}}">Main page</a>
+          </li>
+          <li class="">
+            <a href="{{url_for('extract')}}">Extracts opinions</a>
+          </li>
+          <li class="">
+            <a href="{{url_for('products')}}">Products list</a>
+          </li>
+          <li class="">
+            <a href="{{url_for('author')}}">About Author</a>
+          </li>
         </ul>
-    </nav>
+      </nav>
+    </header>
     <section>
-        {% block content %}
-        <p>This is the base file</p>
-        {% endblock %}
+      {% block content %}
+      <p>This is base file.</p>
+      {% endblock %}
     </section>
-    <footer>
-        <p>
-            Karol Szpitalny, Krakow University of econommics
-        </p>
+    <footer class="fotterContainer">
+      <p>Sebastian Wróbel, Kraków University of Economics</p>
     </footer>
-</body>
+    {% block scripts %} {% endblock %}
+  </body>
 </html>
