--- a/app/static/style.css
+++ b/app/static/style.css
@@ -49,3 +49,13 @@ h2 {
   color: white;
   text-align: center;
 }
+.Card{  
+  color: white
+}
+
+.Donwload_buttons{
+  color: white
+}
+.Donwload_buttons_container{
+  color: white
+}
