--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,7 +44,7 @@
       {% endblock %}
     </section>
     <footer class="fotterContainer">
-      <p>Sebastian Wróbel, Kraków University of Economics</p>
+      <p>Karol, Kraków University of Economics</p>
     </footer>
     {% block scripts %} {% endblock %}
   </body>
