--- a/app/templates/charts.html
+++ b/app/templates/charts.html
@@ -1,3 +1,8 @@
-{%extends 'base.html' %} {% block content %}
-<p>This is {{product_id}} charts file.</p>
+{% extends 'base.html' %}
+
+{% block content %}
+<div>
+    <h2>Opinions score histogram for product {{ product_id }}</h2>
+    <img src="data:image/png;base64,{{ img_data }}" alt="Opinions Score Histogram">
+</div>
 {% endblock %}
